--- a/index.cancelamentos.html
+++ b/index.cancelamentos.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8" />
   <title>Cancelamentos - Grupo DV</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Roboto', Arial, sans-serif;
       background: #f7f7f7;
       margin: 0;
       padding: 0;
@@ -138,6 +139,9 @@
       cursor: pointer;
       box-shadow: 0 0 20px rgba(0,0,0,0.3);
     }
+    #chatAssistente {
+      font-family: 'Roboto', sans-serif;
+    }
     @keyframes siriPulse {
       0% { filter: hue-rotate(0deg); }
       100% { filter: hue-rotate(360deg); }
@@ -165,11 +169,11 @@
   <div id="listaCancelamentos"></div>
 </div>
 
-<!-- Botão Assistente com Efeito Siri -->
+<!-- Botão Assistente -->
 <button id="btnAbrirAssistente" onclick="document.getElementById('chatAssistente').style.display='flex'">💬</button>
 <div id="chatAssistente" style="display:none; position: fixed; bottom: 90px; right: 20px; width: 300px; max-height: 400px; background: white; box-shadow: 0 0 15px rgba(0,0,0,0.2); border-radius: 10px; overflow: hidden; z-index: 9998; font-family: Arial, sans-serif;">
-  <div style="background: #343a40; color: white; padding: 10px; text-align: center;">Assistente</div>
-  <div id="chatMensagens" style="padding: 10px; height: 250px; overflow-y: auto;"></div>
+  <div style="background: #343a40; color: white; padding: 10px; text-align: center; font-weight: bold;">Assistente</div>
+  <div id="chatMensagens" style="padding: 10px; height: 250px; overflow-y: auto; display: flex; flex-direction: column;"></div>
   <div style="display: flex; border-top: 1px solid #ccc;">
     <input id="inputMensagem" type="text" placeholder="Pergunte algo..." style="flex:1; border:none; padding: 10px; outline: none;">
     <button onclick="responderPergunta()" style="background:#25D366;color:white;border:none;padding: 0 15px;">➤</button>
@@ -177,6 +181,15 @@
 </div>
 
 <script>
+  window.onload = () => {
+    const hoje = new Date();
+    const ontem = new Date(hoje);
+    ontem.setDate(hoje.getDate() - 1);
+    const formato = d => d.toISOString().split('T')[0];
+    document.getElementById("dataInicio").value = formato(ontem);
+    document.getElementById("dataFim").value = formato(ontem);
+  }
+
   function responderPergunta() {
     const input = document.getElementById("inputMensagem");
     const texto = input.value.trim();
@@ -201,38 +214,7 @@
     chat.appendChild(divResp);
 
     setTimeout(() => {
-      let resposta = "❓ Ainda estou aprendendo! Tente perguntar sobre cancelamentos do mês passado, hoje, rodízio, ou empresa com mais cancelamentos.";
-      const hoje = new Date();
-      const ontem = new Date(hoje);
-      ontem.setDate(hoje.getDate() - 1);
-      const mesPassado = new Date();
-      mesPassado.setMonth(hoje.getMonth() - 1);
-      const mes = String(mesPassado.getMonth() + 1).padStart(2, '0');
-      const ano = mesPassado.getFullYear();
-
-      if (texto.includes("mês passado")) {
-        const total = cancelamentos.filter(c => c.data.startsWith(`${ano}-${mes}`)).reduce((s, c) => s + c.valor, 0);
-        resposta = `💰 Total cancelado em ${mes}/${ano}: ${formatarMoeda(total)}`;
-      } else if (texto.includes("rodízio") || texto.includes("rodizio")) {
-        const rodizios = cancelamentos.filter(c => c.item.toLowerCase().includes("rodízio") || c.item.toLowerCase().includes("rodizio"));
-        const total = rodizios.reduce((s, c) => s + c.valor, 0);
-        resposta = `🍽️ Cancelamentos de rodízio: ${rodizios.length} itens, total ${formatarMoeda(total)}`;
-      } else if (texto.includes("empresa") && texto.includes("mais")) {
-        const totais = {};
-        cancelamentos.forEach(c => { totais[c.empresa] = (totais[c.empresa] || 0) + c.valor; });
-        const maior = Object.entries(totais).sort((a,b)=>b[1]-a[1])[0];
-        resposta = `🏢 Empresa com mais cancelamentos: ${maior[0]} (${formatarMoeda(maior[1])})`;
-      } else if (texto.includes("hoje")) {
-        const hojeStr = hoje.toISOString().split('T')[0];
-        const total = cancelamentos.filter(c => c.data === hojeStr).reduce((s, c) => s + c.valor, 0);
-        resposta = `📅 Cancelamentos de hoje: ${formatarMoeda(total)}`;
-      } else if (texto.includes("ontem")) {
-        const ontemStr = ontem.toISOString().split('T')[0];
-        const total = cancelamentos.filter(c => c.data === ontemStr).reduce((s, c) => s + c.valor, 0);
-        resposta = `📆 Cancelamentos de ontem: ${formatarMoeda(total)}`;
-      }
-
-      divResp.textContent = resposta;
+      divResp.textContent = "❓ Ainda estou aprendendo! Tente perguntar sobre cancelamentos do mês passado, hoje, rodízio, ou empresa com mais cancelamentos.";
       input.value = "";
       chat.scrollTop = chat.scrollHeight;
     }, 600);
