--- a/index.cancelamentos.html
+++ b/index.cancelamentos.html
@@ -1,3 +1,5 @@
+
+<!-- INÍCIO DO CÓDIGO HTML -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -5,31 +7,6 @@
   <title>Cancelamentos - Grupo DV</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script>
-let cancelamentos = [];
-
-const URL_SCRIPT = 'https://script.google.com/macros/s/AKfycby6kNirWdyaFymip0MFrqTNoItMgqkXJrzwf41Qxe2P1j8BoBILtnyws8o4f5sUdg-T3w/exec';
-
-function formatarMoeda(valor) {
-  return valor.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
-}
-
-function formatarDataBR(dataISO) {
-  const [ano, mes, dia] = dataISO.split("-");
-  return `${dia}/${mes}/${ano}`;
-}
-
-async function carregarDados() {
-  const res = await fetch(URL_SCRIPT);
-  cancelamentos = await res.json();
-  aplicarFiltros?.();
-}
-
-window.onload = () => {
-  preencherDataPadrao?.();
-  carregarDados();
-};
-</script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -167,15 +144,11 @@ window.onload = () => {
 
 <div class="container">
   <div class="filters">
-  <label for="dataInicio">Data Início:</label>
-  <input type="date" id="dataInicio" />
-  <label for="dataFim">Data Fim:</label>
-  <input type="date" id="dataFim" />
-  <label for="filtroEmpresa">Empresa:</label>
-  <select id="filtroEmpresa"></select>
-  <label for="filtroBusca">Buscar:</label>
-  <input type="text" id="filtroBusca" placeholder="Buscar item..." />
-</div>
+    <input type="date" id="dataInicio" />
+    <input type="date" id="dataFim" />
+    <select id="filtroEmpresa"></select>
+    <input type="text" id="filtroBusca" placeholder="Buscar item..." />
+  </div>
 
   <button class="btn-whatsapp" onclick="enviarWhatsapp()">📤 Enviar via WhatsApp</button>
 
@@ -183,168 +156,204 @@ window.onload = () => {
     📊 Total Cancelado: <span id="totalCancelado"><strong>R$ 0,00</strong></span>
   </div>
 
+  <div id="infoPeriodo" class="dados-analisados"></div>
   <canvas id="graficoCancelamentos"></canvas>
   <div id="listaCancelamentos"></div>
   <div class="dados-analisados" id="resumoDados"></div>
 </div>
 
-<!-- AQUI SERÁ INSERIDO O ASSISTENTE FLUTUANTE -->
-<script src="https://cdn.jsdelivr.net/gh/openai-labs/chatgpt-assistente/cancelamento-assistente.js"></script>
+<!-- Assistente Virtual -->
+<div id="chatAssistente" style="position:fixed;bottom:20px;right:20px;width:300px;max-height:400px;background:#fff;border-radius:12px;box-shadow:0 0 10px rgba(0,0,0,0.2);overflow:hidden;font-size:13px;display:flex;flex-direction:column;z-index:9999">
+  <div style="background:#25D366;color:white;padding:10px;font-weight:bold;text-align:center">🤖 Assistente Virtual</div>
+  <div id="chatMensagens" style="flex:1;padding:10px;overflow-y:auto"></div>
+  <div style="display:flex;border-top:1px solid #eee">
+    <input id="chatInput" type="text" placeholder="Pergunte algo..." style="flex:1;border:none;padding:10px;font-size:13px" onkeypress="if(event.key==='Enter')responderPergunta()">
+    <button onclick="responderPergunta()" style="background:#25D366;color:white;border:none;padding:10px 15px;cursor:pointer">➤</button>
+  </div>
+</div>
 
 <script>
-// Script do assistente flutuante
-const botao = document.createElement('button');
-botao.id = 'botaoAssistente';
-botao.innerText = '💬';
-document.body.appendChild(botao);
+  const URL_SCRIPT = 'https://script.google.com/macros/s/AKfycby6kNirWdyaFymip0MFrqTNoItMgqkXJrzwf41Qxe2P1j8BoBILtnyws8o4f5sUdg-T3w/exec';
+  let cancelamentos = [];
+  let chartCancelamentos = null;
 
-const chat = document.createElement('div');
-chat.id = 'chatAssistente';
-chat.innerHTML = `
-  <div id="mensagensAssistente">
-    <div id="clipSugestoes">
-      💡 Tente perguntar:<br>
-      • Quanto foi cancelado mês passado?<br>
-      • Qual item mais cancelado?<br>
-      • Qual empresa teve mais cancelamentos ontem?
-    </div>
-  </div>
-  <div id="inputAssistente">
-    <input type="text" id="perguntaAssistente" placeholder="Digite sua pergunta..." />
-    <button id="enviarPergunta">🔍</button>
-  </div>
-`;
-document.body.appendChild(chat);
-
-const estilo = document.createElement('style');
-estilo.innerHTML = `
-#botaoAssistente {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background: linear-gradient(45deg, #0ff, #80f);
-  border: none;
-  border-radius: 50%;
-  width: 60px;
-  height: 60px;
-  font-size: 28px;
-  color: white;
-  cursor: pointer;
-  box-shadow: 0 0 20px rgba(0,255,255,0.6);
-  z-index: 999;
-}
-#chatAssistente {
-  position: fixed;
-  bottom: 90px;
-  right: 20px;
-  width: 340px;
-  max-height: 500px;
-  background: #111;
-  border: 2px solid #0ff;
-  border-radius: 16px;
-  box-shadow: 0 0 20px rgba(0, 255, 255, 0.5);
-  display: none;
-  flex-direction: column;
-  z-index: 998;
-}
-#mensagensAssistente {
-  padding: 10px;
-  overflow-y: auto;
-  max-height: 400px;
-  font-size: 14px;
-  color: #0ff;
-  font-family: monospace;
-}
-#inputAssistente {
-  display: flex;
-  border-top: 1px solid #0ff;
-}
-#perguntaAssistente {
-  flex: 1;
-  padding: 10px;
-  border: none;
-  border-radius: 0 0 0 16px;
-  background: #000;
-  color: #0ff;
-  font-size: 14px;
-}
-#enviarPergunta {
-  background: #0ff;
-  border: none;
-  padding: 10px 16px;
-  border-radius: 0 0 16px 0;
-  color: #000;
-  cursor: pointer;
-  font-weight: bold;
-}
-#clipSugestoes {
-  background: rgba(0,255,255,0.1);
-  padding: 8px 12px;
-  border-radius: 8px;
-  color: #0ff;
-  font-size: 13px;
-  font-style: italic;
-  margin: 6px;
-}`;
-document.head.appendChild(estilo);
-
-botao.addEventListener('click', () => {
-  chat.style.display = chat.style.display === 'none' ? 'flex' : 'none';
-});
-
-document.getElementById('enviarPergunta').addEventListener('click', interpretarPergunta);
-
-function interpretarPergunta() {
-  const entrada = document.getElementById('perguntaAssistente').value.toLowerCase();
-  const mensagens = document.getElementById('mensagensAssistente');
-  const resposta = document.createElement('div');
-  resposta.style.marginTop = '10px';
-  resposta.innerHTML = `<strong>🤖 Assistente:</strong><br>`;
-
-  if (entrada.includes("ontem") && entrada.includes("mais")) {
-    let ontem = new Date();
-    ontem.setDate(ontem.getDate() - 1);
-    const dataStr = ontem.toISOString().split('T')[0];
-    const porEmpresa = {};
-    cancelamentos.forEach(c => {
-      if (c.data === dataStr) {
-        if (!porEmpresa[c.empresa]) porEmpresa[c.empresa] = 0;
-        porEmpresa[c.empresa] += c.valor;
-      }
-    });
-    const maior = Object.entries(porEmpresa).sort((a,b)=>b[1]-a[1])[0];
-    resposta.innerHTML += `A empresa com mais cancelamentos ontem (${formatarDataBR(dataStr)}) foi <strong>${maior[0]}</strong> com <strong>${formatarMoeda(maior[1])}</strong>`;
-
-  } else if (entrada.includes("cancelado") && entrada.includes("mês")) {
-    const hoje = new Date();
-    const mes = hoje.getMonth();
-    const ano = hoje.getFullYear();
-    let total = 0;
-    cancelamentos.forEach(c => {
-      const d = new Date(c.data);
-      if (d.getMonth() === mes && d.getFullYear() === ano) total += c.valor;
-    });
-    resposta.innerHTML += `O total de cancelamentos neste mês é <strong>${formatarMoeda(total)}</strong>`;
-
-  } else if (entrada.includes("item") && entrada.includes("cancelado")) {
-    const contagem = {};
-    cancelamentos.forEach(c => {
-      const nome = c.item.split("–")[0].trim();
-      if (!contagem[nome]) contagem[nome] = 0;
-      contagem[nome] += c.valor;
-    });
-    const mais = Object.entries(contagem).sort((a,b)=>b[1]-a[1])[0];
-    resposta.innerHTML += `O item mais cancelado é <strong>${mais[0]}</strong> com <strong>${formatarMoeda(mais[1])}</strong>`;
-
-  } else {
-    resposta.innerHTML += `Desculpe, não entendi sua pergunta. Tente algo como: \"Qual empresa teve mais cancelamentos ontem?\"`;
+  function formatarMoeda(valor) {
+    return valor.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' });
   }
 
-  mensagens.appendChild(resposta);
-  mensagens.scrollTop = mensagens.scrollHeight;
-  document.getElementById('perguntaAssistente').value = '';
-}
-</script>
+  function formatarDataBR(dataISO) {
+    const [ano, mes, dia] = dataISO.split("-");
+    return `${dia}/${mes}/${ano}`;
+  }
 
+  function preencherDataPadrao() {
+    const hoje = new Date();
+    const ontem = new Date(hoje);
+    ontem.setDate(hoje.getDate() - 1);
+    const formato = d => d.toISOString().split('T')[0];
+    document.getElementById("dataInicio").value = formato(ontem);
+    document.getElementById("dataFim").value = formato(ontem);
+  }
+
+  async function carregarDados() {
+    const res = await fetch(URL_SCRIPT);
+    cancelamentos = await res.json();
+    preencherFiltros();
+    aplicarFiltros();
+  }
+
+  function preencherFiltros() {
+    const empresas = [...new Set(cancelamentos.map(c => c.empresa))].sort();
+    const selectEmpresa = document.getElementById('filtroEmpresa');
+    selectEmpresa.innerHTML = `<option value="">Todas as Empresas</option>` +
+      empresas.map(emp => `<option value="${emp}">${emp}</option>`).join('');
+  }
+
+  function aplicarFiltros() {
+    const empresaFiltro = document.getElementById('filtroEmpresa').value;
+    const busca = document.getElementById('filtroBusca').value.toLowerCase();
+    const dataInicio = document.getElementById('dataInicio').value;
+    const dataFim = document.getElementById('dataFim').value;
+
+    const lista = document.getElementById("listaCancelamentos");
+    lista.innerHTML = "";
+    let totalGeral = 0;
+    const grupos = {};
+
+    cancelamentos.forEach(c => {
+      if (
+        (empresaFiltro && c.empresa !== empresaFiltro) ||
+        (busca && !c.item.toLowerCase().includes(busca)) ||
+        (dataInicio && c.data < dataInicio) ||
+        (dataFim && c.data > dataFim)
+      ) return;
+
+      if (!grupos[c.empresa]) grupos[c.empresa] = [];
+      grupos[c.empresa].push(c);
+    });
+
+    Object.keys(grupos).forEach(empresa => {
+      const grupo = grupos[empresa];
+      let subtotal = 0;
+
+      const divGrupo = document.createElement("div");
+      divGrupo.className = "grupo-empresa";
+
+      const primeiraData = grupo[0]?.data || "";
+      grupo.forEach(c => subtotal += c.valor);
+      totalGeral += subtotal;
+
+      const titulo = document.createElement("h2");
+      titulo.innerHTML = `📅 ${formatarDataBR(primeiraData)} • 🏢 ${empresa} — <strong>Subtotal: ${formatarMoeda(subtotal)}</strong>`;
+      divGrupo.appendChild(titulo);
+
+      grupo.forEach(c => {
+        const itemDiv = document.createElement("div");
+        itemDiv.className = "item-cancelamento";
+        const [nomeItem, valorInfo] = c.item.split(" – ");
+        itemDiv.innerHTML = `
+          <p>${nomeItem}</p>
+          <p>💸 ${valorInfo || formatarMoeda(c.valor)}</p>
+        `;
+        divGrupo.appendChild(itemDiv);
+      });
+
+      lista.appendChild(divGrupo);
+
+      if (empresaFiltro === empresa) {
+        desenharGrafico(grupo);
+      }
+    });
+
+    document.getElementById("totalCancelado").innerHTML = `<strong>${formatarMoeda(totalGeral)}</strong>`;
+    document.getElementById("graficoCancelamentos").style.display = empresaFiltro ? "block" : "none";
+  }
+
+  function desenharGrafico(lista) {
+    const dadosPorData = {};
+    lista.forEach(c => {
+      if (!dadosPorData[c.data]) dadosPorData[c.data] = 0;
+      dadosPorData[c.data] += c.valor;
+    });
+
+    const labels = Object.keys(dadosPorData).sort();
+    const valores = labels.map(d => dadosPorData[d]);
+
+    const ctx = document.getElementById("graficoCancelamentos").getContext("2d");
+    if (chartCancelamentos) chartCancelamentos.destroy();
+
+    chartCancelamentos = new Chart(ctx, {
+      type: 'line',
+      data: {
+        labels: labels.map(formatarDataBR),
+        datasets: [{
+          label: 'Cancelamentos por Dia',
+          data: valores,
+          borderColor: '#e74c3c',
+          backgroundColor: 'rgba(231, 76, 60, 0.1)',
+          tension: 0.3,
+          fill: true
+        }]
+      },
+      options: {
+        responsive: true,
+        plugins: {
+          legend: { display: false },
+          title: { display: true, text: '📈 Evolução dos Cancelamentos' }
+        },
+        scales: {
+          y: { beginAtZero: true }
+        }
+      }
+    });
+  }
+
+  function responderPergunta() {
+    const input = document.getElementById("chatInput");
+    const pergunta = input.value.trim();
+    if (!pergunta) return;
+
+    adicionarMensagem("Você", pergunta);
+    input.value = "";
+
+    let resposta = "Desculpe, não entendi sua pergunta.";
+    const mesAnterior = new Date();
+    mesAnterior.setMonth(mesAnterior.getMonth() - 1);
+    const mesAnteriorStr = mesAnterior.toISOString().slice(0, 7);
+
+    if (/cancelado.*mes.*passado/.test(pergunta.toLowerCase())) {
+      const total = cancelamentos.filter(c => c.data.startsWith(mesAnteriorStr)).reduce((acc, cur) => acc + cur.valor, 0);
+      resposta = `No mês passado foram cancelados ${formatarMoeda(total)}.`;
+    } else if (/empresa.*rod[ií]zio/.test(pergunta.toLowerCase())) {
+      const empresas = [...new Set(cancelamentos.filter(c => c.item.toLowerCase().includes("rodízio") || c.item.toLowerCase().includes("rodizio")).map(c => c.empresa))];
+      resposta = empresas.length ? `Empresas com cancelamentos de rodízio: ${empresas.join(", ")}` : "Nenhuma empresa teve cancelamentos de rodízio.";
+    } else if (/valor.*rod[ií]zio/.test(pergunta.toLowerCase())) {
+      const total = cancelamentos.filter(c => c.item.toLowerCase().includes("rodízio") || c.item.toLowerCase().includes("rodizio")).reduce((acc, cur) => acc + cur.valor, 0);
+      resposta = `O valor total dos cancelamentos de rodízio foi ${formatarMoeda(total)}.`;
+    }
+
+    adicionarMensagem("Assistente", resposta);
+  }
+
+  function adicionarMensagem(remetente, mensagem) {
+    const chat = document.getElementById("chatMensagens");
+    const div = document.createElement("div");
+    div.innerHTML = `<strong>${remetente}:</strong> ${mensagem}`;
+    div.style.marginBottom = "8px";
+    chat.appendChild(div);
+    chat.scrollTop = chat.scrollHeight;
+  }
+
+  document.getElementById('filtroEmpresa').addEventListener('change', aplicarFiltros);
+  document.getElementById('dataInicio').addEventListener('change', aplicarFiltros);
+  document.getElementById('dataFim').addEventListener('change', aplicarFiltros);
+  document.getElementById('filtroBusca').addEventListener('input', aplicarFiltros);
+
+  window.onload = () => {
+    preencherDataPadrao();
+    carregarDados();
+  };
+</script>
 </body>
 </html>
+<!-- FIM DO CÓDIGO HTML -->
